test/errors/x021_dot_in_key.eu
# -*- mode: conf -*-
x.y: 2
